--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body id="page-top">
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+  <nav class="navbar navbar-expand-lg bg-secondary fixed-top text-uppercase" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Cameron McGarry</a>
       <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -33,13 +33,14 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/cv/">CV</a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="cv.html">CV</a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="mailto:contact@cmcgarry.co.uk"><i class="fab fa-fw fa-envelope"></a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
+              href="mailto:contact@cmcgarry.co.uk"><i class="far fa-envelope"></i></a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/mcgarc""><i class="fab fa-fw fa-github"></i></a>
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/mcgarc"><i class="fab fa-fw fa-github"></i></a>
           </li>
         </ul>
       </div>
@@ -60,7 +61,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-atom"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -76,13 +77,13 @@
     <div class="container">
 
       <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-white">About</h2>
+      <h2 class="page-section-heading text-center text-uppercase">About</h2>
 
       <!-- Icon Divider -->
-      <div class="divider-custom divider-light">
+      <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-atom"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -99,7 +100,7 @@
 
       <!-- About Section Button -->
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-light" href="/cv/">
+        <a class="btn btn-xl btn-outline-primary" href="cv.html">
           View my CV
         </a>
       </div>
@@ -109,10 +110,15 @@
 
 
   <!-- Copyright Section -->
-  <section class="copyright py-4 text-center text-white">
-    <div class="container">
-      <small>Built with <a href="https://startbootstrap.com/themes/freelancer/">Freelancer</a>. Copyright &copy; Cameron McGarry 2019</small>
-    </div>
+  <section class="copyright py-4 text-white">
+      <div class="row">
+      <div class="col-lg-4 ml-auto text-left">
+        <small>Built with <a href="https://startbootstrap.com/themes/freelancer/">Freelancer</a>.</small>
+      </div>
+      <div class="col-lg-4 mr-auto text-right">
+        <small>Copyright &copy; Cameron McGarry 2019</small>
+      </div>
+      </div>
   </section>
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
