--- a/index.html
+++ b/index.html
@@ -91,10 +91,14 @@
       <!-- About Section Content -->
       <div class="row">
         <div class="col-lg-4 ml-auto">
-          <p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p>
+          <p class="lead">I am a PhD student in <a
+             href="https://www.imperial.ac.uk/centre-for-cold-matter/">the Centre
+             for Cold Matter</a> at Imperial College London. My research focuses
+           on the design of microscopic traps for ultracold molecules.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p>
+          <p class="lead">My other main interests are programming (mainly in
+          Python), running and coxing at Thames Rowing Club.</p>
         </div>
       </div>
 
