--- a/cv.html
+++ b/cv.html
@@ -16,7 +16,8 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
   <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+  <link href="css/freelancer.css" rel="stylesheet">
+  <link href="css/resume.css" rel="stylesheet">
 
 </head>
 
@@ -71,46 +72,54 @@
     </div>
   </header>
 
-  <!-- About Section -->
-  <section class="page-section ml-0" id="about">
+  <!-- Education Section -->
+  <section class="page-section ml-0" id="education">
     <div class="container">
 
-      <!-- About Section Heading -->
-      <h2 class="page-section-heading text-center ml-0">About</h2>
+      <!-- Section Heading -->
+      <h2 class="page-section-heading text-left ml-0 mb-4"><i class="fas fa-atom"></i> Education</h2>
 
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-atom"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
+				<div class="ml-3">
 
-      <!-- About Section Content -->
-      <div class="row">
-        <div class="col-lg-4 ml-auto">
-          <p class="lead">I am a PhD student in <a
-             href="https://www.imperial.ac.uk/centre-for-cold-matter/">the Centre
-             for Cold Matter</a> at Imperial College London. My research focuses
-           on the design of microscopic traps for ultracold molecules.</p>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Imperial College London</h3>
+            <div class="subheading mb-1">PhD</div>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2006 - May 2010</span>
+          </div>
         </div>
-        <div class="col-lg-4 mr-auto">
-          <p class="lead">My other main interests are programming (mainly in
-          Python), running and coxing at Thames Rowing Club.</p>
-        </div>
-      </div>
 
-      <!-- About Section Button -->
-      <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-primary" href="cv.html">
-          View my CV
-        </a>
-      </div>
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">University of Oxford</h3>
+            <div class="subheading mb-1">MPhys: Physics</div>
+            <div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">August 2006 - May 2010</span>
+          </div>
+        </div>
+
+			</div>
 
     </div>
   </section>
 
+  <!-- Research Section -->
+  <section class="page-section ml-0 bg-secondary text-white" id="research">
+    <div class="container">
+
+      <!-- Section Heading -->
+      <h2 class="page-section-heading text-left ml-0">Research experience</h2>
+
+
+    </div>
+  </section>
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-white">
