Big CSS changes and basic template

--- a/cv.html
+++ b/cv.html
@@ -73,35 +73,45 @@
   </header>
 
   <!-- Education Section -->
-  <section class="page-section ml-0" id="education">
+  <div class="container-fluid p-0">
+    <!--resume-section p-3 p-lg-5 d-flex align-items-center-->
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center" id="education">
     <div class="container">
 
       <!-- Section Heading -->
-      <h2 class="page-section-heading text-left ml-0 mb-4"><i class="fas fa-atom"></i> Education</h2>
+      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Education</h2>
 
 				<div class="ml-3">
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
           <div>
             <h3 class="mb-0">Imperial College London</h3>
-            <div class="subheading mb-1">PhD</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div class="subheading mb-1">PhD: Controlled Quantum Dynamics</div>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Student in controlled quantum dynamics centre for doctoral training </li>
+              <li>Graded “distinction” in master’s year </li>
+              <li>Designing and microfabricating a chip trap for robust containment and control of cold molecules </li>
+              <li>Applications in quantum technology, thermodynamics and communications </li>
+              <li class="resume-skills">Quantum optics, chemistry and information; laser science; microfabrication; Python; Mathematica</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">October 2017 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
           <div>
             <h3 class="mb-0">University of Oxford</h3>
-            <div class="subheading mb-1">MPhys: Physics</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <div class="subheading mb-1">Master of Physics</div>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Master of Physics, Upper Second Class Honours, integrated master’s and undergraduate degrees</li>
+              <li>Master’s project: use of compressed sensing in plasma wakefield accelerators</li>
+              <li class="resume-skills">Atomic, molecular and laser physics; quantum information; condensed matter physics</li>
+            </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">October 2013 - July 2017</span>
           </div>
         </div>
 
@@ -109,14 +119,50 @@
 
     </div>
   </section>
+  </div>
 
   <!-- Research Section -->
-  <section class="page-section ml-0 bg-secondary text-white" id="research">
+    <section class="page-section ml-0 bg-secondary text-white" id="research">
     <div class="container">
 
       <!-- Section Heading -->
-      <h2 class="page-section-heading text-left ml-0">Research experience</h2>
+      <h2 class="page-section-heading text-left ml-0 mb-4"><i class="fas fa-atom"></i> Research</h2>
 
+				<div class="ml-3">
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Imperial College London</h3>
+            <div class="subheading mb-1">PhD: Controlled Quantum Dynamics</div>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Student in controlled quantum dynamics centre for doctoral training </li>
+              <li>Graded “distinction” in master’s year </li>
+              <li>Designing and microfabricating a chip trap for robust containment and control of cold molecules </li>
+              <li>Applications in quantum technology, thermodynamics and communications </li>
+              <li class="resume-skills">Quantum optics, chemistry and information; laser science; microfabrication; Python; Mathematica</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2017 - Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">University of Oxford</h3>
+            <div class="subheading mb-1">Master of Physics</div>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Master of Physics, Upper Second Class Honours, integrated master’s and undergraduate degrees</li>
+              <li>Master’s project: use of compressed sensing in plasma wakefield accelerators</li>
+              <li class="resume-skills">Atomic, molecular and laser physics; quantum information; condensed matter physics</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2013 - July 2017</span>
+          </div>
+        </div>
+
+			</div>
 
     </div>
   </section>
