Research placements section

--- a/cv.html
+++ b/cv.html
@@ -74,7 +74,6 @@
 
   <!-- Education Section -->
   <div class="container-fluid p-0">
-    <!--resume-section p-3 p-lg-5 d-flex align-items-center-->
   <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center" id="education">
     <div class="container">
 
@@ -122,43 +121,42 @@
   </div>
 
   <!-- Research Section -->
-    <section class="page-section ml-0 bg-secondary text-white" id="research">
+  <div class="container-fluid p-0">
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-secondary text-white" id="research">
     <div class="container">
 
       <!-- Section Heading -->
-      <h2 class="page-section-heading text-left ml-0 mb-4"><i class="fas fa-atom"></i> Research</h2>
+      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Research placements</h2>
 
 				<div class="ml-3">
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
           <div>
-            <h3 class="mb-0">Imperial College London</h3>
-            <div class="subheading mb-1">PhD: Controlled Quantum Dynamics</div>
+            <h3 class="mb-0">Superconducting qubits, Department of Physics,
+              Unviersity of Oxford</h3>
             <ul class="list-unstyled mb-0 ml-2">
-              <li>Student in controlled quantum dynamics centre for doctoral training </li>
-              <li>Graded “distinction” in master’s year </li>
-              <li>Designing and microfabricating a chip trap for robust containment and control of cold molecules </li>
-              <li>Applications in quantum technology, thermodynamics and communications </li>
-              <li class="resume-skills">Quantum optics, chemistry and information; laser science; microfabrication; Python; Mathematica</li>
+              <li>Simulated and developed signal attenuator for use in
+                experiments with superconducting qubits</li>
+              <li>Eight week summer placement in Prof. Peter Leek's research
+                group.</li>
+              <li class="resume-skills">Quantum engineering; CAD; Python; Mathematica</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2017 - Present</span>
+            <span class="text-primary">2016</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
           <div>
-            <h3 class="mb-0">University of Oxford</h3>
-            <div class="subheading mb-1">Master of Physics</div>
+            <h3 class="mb-0">Unconventional computing, YCCSA, University of York</h3>
             <ul class="list-unstyled mb-0 ml-2">
-              <li>Master of Physics, Upper Second Class Honours, integrated master’s and undergraduate degrees</li>
-              <li>Master’s project: use of compressed sensing in plasma wakefield accelerators</li>
-              <li class="resume-skills">Atomic, molecular and laser physics; quantum information; condensed matter physics</li>
-            </ul>
+              <li>Undertook research into novel forms of classical computation using nuclear magnetic resonance</li>
+              <li>Utilised this well-understood “sandbox” environment to implement systems with continuous logic </li>
+              <li class="resume-skills">Quantum mechanics; Python</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2013 - July 2017</span>
+            <span class="text-primary">2015</span>
           </div>
         </div>
 
@@ -166,6 +164,7 @@
 
     </div>
   </section>
+  </div>
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-white">
