Pointer to Resumay

--- a/cv.html
+++ b/cv.html
@@ -69,6 +69,11 @@
         </a>
       </div>
 
+      <div class="text-center mt-4">
+        This CV was generated with my LaTeX CV class, <a
+        class="text-secondary" href="https://github.com/mcgarc/Resumay">Resumay</a>.
+      </div>
+
     </div>
   </header>
 
