--- a/cv.html
+++ b/cv.html
@@ -144,11 +144,11 @@
                 experiments with superconducting qubits</li>
               <li>Eight week summer placement in Prof. Peter Leek's research
                 group.</li>
-              <li class="resume-skills">Quantum engineering; CAD; Python; Mathematica</li>
+              <li class="resume-skills">Quantum engineering, CAD, Python, Mathematica</li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2016</span>
+            <span class="text-primary">Summer 2016</span>
           </div>
         </div>
 
@@ -158,10 +158,108 @@
             <ul class="list-unstyled mb-0 ml-2">
               <li>Undertook research into novel forms of classical computation using nuclear magnetic resonance</li>
               <li>Utilised this well-understood “sandbox” environment to implement systems with continuous logic </li>
-              <li class="resume-skills">Quantum mechanics; Python</li>
+              <li class="resume-skills">Quantum mechanics, Python</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">2015</span>
+            <span class="text-primary">Summer 2015</span>
+          </div>
+        </div>
+
+			</div>
+
+    </div>
+  </section>
+  </div>
+
+  <!-- Software Section -->
+  <div class="container-fluid p-0">
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center" id="software">
+    <div class="container">
+
+      <!-- Section Heading -->
+      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Software projects</h2>
+
+				<div class="ml-3">
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Oxford University Rowing Clubs Website</h3>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Began and lead development of a new CMS-based website as coordinator of small team</li>
+              <li>Integrated with an existing system for handling entries into rowing events </li>
+              <li>Also responsible for deployment and server maintenance</li>
+              <li class="resume-skills">Python, Django, SQL, Apache</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2017 - January 2019</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Qiskit Contributor</h3>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Contributed to open-source project</li>
+              <li><a href="https://qiskit.org">Qiskit</a> is a toolkit for interacting with quantum processors, procuced by IBM.</a>
+              <li class="resume-skills">Python, Quantum computing</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">December 2019 - Present</span>
+          </div>
+        </div>
+
+			</div>
+
+    </div>
+  </section>
+  </div>
+
+  <!-- Misc. Section -->
+  <div class="container-fluid p-0">
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-secondary text-white" id="other">
+    <div class="container">
+
+      <!-- Section Heading -->
+      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Other experience</h2>
+
+				<div class="ml-3">
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Python lab demonstrating, Imperial College London </h3>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Demonstrator in Python course for second year physics undergraduates</li>
+              <li>Teaching basics of object-oriented programming</li>
+            </ul>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">October 2018-Present</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">President, Corpus Christi College Boat Club</h3>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Responsibility for equimpent, safety and general running of the club</li>
+              <li>Set out plans for long-term financial security by working with alumni and rasing profile to attract potential sponsors</li>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2016 - March 2017</span>
+          </div>
+        </div>
+
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
+          <div>
+            <h3 class="mb-0">Treasurer, Corpus Christi College Boat Club</h3>
+            <ul class="list-unstyled mb-0 ml-2">
+              <li>Ran ice hockey sessions including collecting payment and ensuring safety</li>
+              <li>Reduced financial defecit by approximately 80%, by focusing heavily on recruitment</li>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">March 2014 - March 2015</span>
           </div>
         </div>
 
