Fix copyright section spillover

--- a/cv.html
+++ b/cv.html
@@ -271,12 +271,14 @@
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-white">
+      <div class="container">
       <div class="row">
       <div class="col-lg-4 ml-auto text-left">
         <small>Built with <a href="https://startbootstrap.com/themes/freelancer/">Freelancer</a>.</small>
       </div>
       <div class="col-lg-4 mr-auto text-right">
         <small>Copyright &copy; Cameron McGarry 2019</small>
+      </div>
       </div>
       </div>
   </section>
