--- a/cv.html
+++ b/cv.html
@@ -253,7 +253,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
           <div>
-            <h3 class="mb-0">Treasurer, Corpus Christi College Boat Club</h3>
+            <h3 class="mb-0">Treasurer, Oxford University Alternative Pickup Ice Hockey Club</h3>
             <ul class="list-unstyled mb-0 ml-2">
               <li>Ran ice hockey sessions including collecting payment and ensuring safety</li>
               <li>Reduced financial defecit by approximately 80%, by focusing heavily on recruitment</li>
