--- a/index.html
+++ b/index.html
@@ -90,15 +90,20 @@
 
       <!-- About Section Content -->
       <div class="row">
-        <div class="col-lg-4 ml-auto">
+        <div class="col-lg-4 ml-auto lead">
+           Experience:
+           <ul>
+            <li>Quantum optics and chemistry</li>
+            <li>Laser science</li>
+            <li>Python, Mathematica</li>
+            <li>Microfabrication</li>
+          </ul>
+        </div>
+        <div class="col-lg-4 mr-auto">
           <p class="lead">I am a PhD student in <a
              href="https://www.imperial.ac.uk/centre-for-cold-matter/">the Centre
              for Cold Matter</a> at Imperial College London. My research focuses
            on the design of microscopic traps for ultracold molecules.</p>
-        </div>
-        <div class="col-lg-4 mr-auto">
-          <p class="lead">My other main interests are programming (mainly in
-          Python), running and coxing at Thames Rowing Club.</p>
         </div>
       </div>
 
@@ -107,6 +112,62 @@
         <a class="btn btn-xl btn-outline-primary" href="cv.html">
           View my CV
         </a>
+      </div>
+
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section class="page-section bg-primary text-white mb-0" id="contact">
+    <div class="container">
+
+      <!-- Contact Section Heading -->
+      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <i class="fas fa-star"></i>
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+      <!-- Contact Section Form -->
+      <div class="row">
+        <div class="col-lg-8 mx-auto">
+          <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19. -->
+          <form name="sentMessage" action="https://formspree.io/contact@cmcgarry.co.uk" method="POST">
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Name</label>
+                <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." name="name">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Email Address</label>
+                <input class="form-control" id="email" type="email"
+                placeholder="Email Address" required="required"
+                data-validation-required-message="Please enter your email address." name="replyto">
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <div class="control-group">
+              <div class="form-group floating-label-form-group controls mb-0 pb-2">
+                <label>Message</label>
+                <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message." name="message"></textarea>
+                <p class="help-block text-danger"></p>
+              </div>
+            </div>
+            <br>
+            <div id="success"></div>
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+            </div>
+          </form>
+        </div>
       </div>
 
     </div>
