--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-              href="mailto:contact@cmcgarry.co.uk"><i class="far fa-envelope"></i></a>
+              href="#contact"><i class="far fa-envelope"></i></a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/mcgarc"><i class="fab fa-fw fa-github"></i></a>
@@ -164,7 +164,7 @@
             <br>
             <div id="success"></div>
             <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton">Send</button>
+              <button type="submit" class="btn btn-secondary btn-xl" id="sendMessageButton">Send</button>
             </div>
           </form>
         </div>
