--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+      <h2 class="page-section-heading text-center text-secondary mb-0">Contact Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom">
