--- a/cv.html
+++ b/cv.html
@@ -100,7 +100,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2017 - Present</span>
+            <span>October 2017 - Present</span>
           </div>
         </div>
 
@@ -115,7 +115,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2013 - July 2017</span>
+            <span>October 2013 - July 2017</span>
           </div>
         </div>
 
@@ -127,7 +127,7 @@
 
   <!-- Research Section -->
   <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-secondary text-white" id="research">
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-primary text-white" id="research">
     <div class="container">
 
       <!-- Section Heading -->
@@ -148,7 +148,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Summer 2016</span>
+            <span class="text-white">Summer 2016</b></span>
           </div>
         </div>
 
@@ -161,7 +161,7 @@
               <li class="resume-skills">Quantum mechanics, Python</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Summer 2015</span>
+            <span class="text-white">Summer 2015</span>
           </div>
         </div>
 
@@ -192,7 +192,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2017 - January 2019</span>
+            <span>October 2017 - January 2019</span>
           </div>
         </div>
 
@@ -206,7 +206,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2019 - Present</span>
+            <span>December 2019 - Present</span>
           </div>
         </div>
 
@@ -218,7 +218,7 @@
 
   <!-- Misc. Section -->
   <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-secondary text-white" id="other">
+  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-primary text-white" id="other">
     <div class="container">
 
       <!-- Section Heading -->
@@ -235,7 +235,7 @@
             </ul>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">October 2018-Present</span>
+            <span>October 2018-Present</span>
           </div>
         </div>
 
@@ -247,7 +247,7 @@
               <li>Set out plans for long-term financial security by working with alumni and rasing profile to attract potential sponsors</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2016 - March 2017</span>
+            <span>March 2016 - March 2017</span>
           </div>
         </div>
 
@@ -259,7 +259,7 @@
               <li>Reduced financial defecit by approximately 80%, by focusing heavily on recruitment</li>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2014 - March 2015</span>
+            <span>March 2014 - March 2015</span>
           </div>
         </div>
 
