--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="img/avataaars.svg" alt="">
+      <img class="masthead-avatar mb-5" src="img/headshot.png" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading mb-0">Cameron McGarry</h1>
@@ -122,10 +122,10 @@
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-secondary mb-0">Contact Me</h2>
+      <h2 class="page-section-heading text-center text-white mb-0">Contact Me</h2>
 
       <!-- Icon Divider -->
-      <div class="divider-custom">
+      <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
           <i class="fas fa-atom"></i>
