--- a/cv.html
+++ b/cv.html
@@ -38,7 +38,7 @@
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-              href="mailto:contact@cmcgarry.co.uk"><i class="far fa-envelope"></i></a>
+              href="index.html#contact"><i class="far fa-envelope"></i></a>
           </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="https://github.com/mcgarc"><i class="fab fa-fw fa-github"></i></a>
