Bring in jsoncv working files

--- a/cv.html
+++ b/cv.html
@@ -19,6 +19,10 @@
   <link href="css/freelancer.css" rel="stylesheet">
   <link href="css/resume.css" rel="stylesheet">
 
+  <!-- JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="js/cv.js"></script>
+
 </head>
 
 <body id="page-top">
@@ -77,197 +81,9 @@
     </div>
   </header>
 
-  <!-- Education Section -->
-  <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center" id="education">
-    <div class="container">
+  <!-- Load CV from JS -->
+  <div id="CV"></div>
 
-      <!-- Section Heading -->
-      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Education</h2>
-
-				<div class="ml-3">
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Imperial College London</h3>
-            <div class="subheading mb-1">PhD: Controlled Quantum Dynamics</div>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Student in controlled quantum dynamics centre for doctoral training </li>
-              <li>Graded “distinction” in master’s year </li>
-              <li>Designing and microfabricating a chip trap for robust containment and control of cold molecules </li>
-              <li>Applications in quantum technology, thermodynamics and communications </li>
-              <li class="resume-skills">Quantum optics, chemistry and information; laser science; microfabrication; Python; Mathematica</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>October 2017 - Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">University of Oxford</h3>
-            <div class="subheading mb-1">Master of Physics</div>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Master of Physics, Upper Second Class Honours, integrated master’s and undergraduate degrees</li>
-              <li>Master’s project: use of compressed sensing in plasma wakefield accelerators</li>
-              <li class="resume-skills">Atomic, molecular and laser physics; quantum information; condensed matter physics</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>October 2013 - July 2017</span>
-          </div>
-        </div>
-
-			</div>
-
-    </div>
-  </section>
-  </div>
-
-  <!-- Research Section -->
-  <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-primary text-white" id="research">
-    <div class="container">
-
-      <!-- Section Heading -->
-      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Research placements</h2>
-
-				<div class="ml-3">
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Superconducting qubits, Department of Physics,
-              Unviersity of Oxford</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Simulated and developed signal attenuator for use in
-                experiments with superconducting qubits</li>
-              <li>Eight week summer placement in Prof. Peter Leek's research
-                group.</li>
-              <li class="resume-skills">Quantum engineering, CAD, Python, Mathematica</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-white">Summer 2016</b></span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Unconventional computing, YCCSA, University of York</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Undertook research into novel forms of classical computation using nuclear magnetic resonance</li>
-              <li>Utilised this well-understood “sandbox” environment to implement systems with continuous logic </li>
-              <li class="resume-skills">Quantum mechanics, Python</li>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-white">Summer 2015</span>
-          </div>
-        </div>
-
-			</div>
-
-    </div>
-  </section>
-  </div>
-
-  <!-- Software Section -->
-  <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center" id="software">
-    <div class="container">
-
-      <!-- Section Heading -->
-      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Software projects</h2>
-
-				<div class="ml-3">
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Oxford University Rowing Clubs Website</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Began and lead development of a new CMS-based website as coordinator of small team</li>
-              <li>Integrated with an existing system for handling entries into rowing events </li>
-              <li>Also responsible for deployment and server maintenance</li>
-              <li class="resume-skills">Python, Django, SQL, Apache</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>October 2017 - January 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Qiskit Contributor</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Contributed to open-source project</li>
-              <li><a href="https://qiskit.org">Qiskit</a> is a toolkit for interacting with quantum processors, procuced by IBM.</a>
-              <li class="resume-skills">Python, Quantum computing</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>December 2019 - Present</span>
-          </div>
-        </div>
-
-			</div>
-
-    </div>
-  </section>
-  </div>
-
-  <!-- Misc. Section -->
-  <div class="container-fluid p-0">
-  <section class="resume-section ml-0 align-items-center p-lg-5 d-flex align-items-center bg-primary text-white" id="other">
-    <div class="container">
-
-      <!-- Section Heading -->
-      <h2 class="resume-section-heading text-left mb-4 p-3 "><i class="fas fa-atom"></i>&nbsp Other experience</h2>
-
-				<div class="ml-3">
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Python lab demonstrating, Imperial College London </h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Demonstrator in Python course for second year physics undergraduates</li>
-              <li>Teaching basics of object-oriented programming</li>
-            </ul>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>October 2018-Present</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">President, Corpus Christi College Boat Club</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Responsibility for equimpent, safety and general running of the club</li>
-              <li>Set out plans for long-term financial security by working with alumni and rasing profile to attract potential sponsors</li>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>March 2016 - March 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-2">
-          <div>
-            <h3 class="mb-0">Treasurer, Oxford University Alternative Pickup Ice Hockey Club</h3>
-            <ul class="list-unstyled mb-0 ml-2">
-              <li>Ran ice hockey sessions including collecting payment and ensuring safety</li>
-              <li>Reduced financial defecit by approximately 80%, by focusing heavily on recruitment</li>
-          </div>
-          <div class="resume-date text-md-right">
-            <span>March 2014 - March 2015</span>
-          </div>
-        </div>
-
-			</div>
-
-    </div>
-  </section>
-  </div>
 
   <!-- Copyright Section -->
   <section class="copyright py-4 text-white">
