--- a/cv.html
+++ b/cv.html
@@ -69,7 +69,7 @@
       </div>
 
       <div class="text-center mt-4">
-        <a class="btn btn-xl btn-outline-secondary" href="files/cv.pdf"><i class="fas fa-download mr-2"></i> Download
+        <a class="btn btn-xl btn-outline-secondary" href="files/cameron_mcgarry_cv.pdf"><i class="fas fa-download mr-2"></i> Download
         </a>
       </div>
 
