--- a/cv.html
+++ b/cv.html
@@ -18,6 +18,9 @@
   <!-- Theme CSS -->
   <link href="css/freelancer.css" rel="stylesheet">
   <link href="css/resume.css" rel="stylesheet">
+  
+  <!-- Favicon -->
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚛️</text></svg>">
 
   <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
