--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="container d-flex align-items-center flex-column">
 
       <!-- Masthead Avatar Image -->
-      <img class="masthead-avatar mb-5" src="/img/headshot.png" alt="">
+      <img class="masthead-avatar mb-5" src="img/headshot.png" alt="">
 
       <!-- Masthead Heading -->
       <h1 class="masthead-heading mb-0">Cameron McGarry</h1>
@@ -64,7 +64,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-atom"></i>
+          <img height=60px src="img/atom_white.svg">
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -86,7 +86,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-atom"></i>
+          <img height=60px src="img/atom.svg">
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -131,7 +131,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-atom"></i>
+          <img height=60px src="img/atom_white.svg">
         </div>
         <div class="divider-custom-line"></div>
       </div>
