--- a/cv.html
+++ b/cv.html
@@ -66,7 +66,7 @@
       <div class="divider-custom divider-light">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-atom"></i>
+          <img height=60px src="img/atom_white.svg">
         </div>
         <div class="divider-custom-line"></div>
       </div>
