--- a/cv.html
+++ b/cv.html
@@ -20,7 +20,7 @@
   <link href="css/resume.css" rel="stylesheet">
   
   <!-- Favicon -->
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>⚛️</text></svg>">
+  <link rel="icon" type="image/svg+xml" href="img/atom_light.svg">
 
   <!-- JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
