--- a/index.html
+++ b/index.html
@@ -120,12 +120,76 @@
     </div>
   </section>
 
+  <!-- Portfolio Section -->
+  <section class="page-section bg-primary text-white mb-0" id="portfolio">
+            <div class="container">
+      <!-- About Section Heading -->
+      <h2 class="page-section-heading text-center">Portfolio</h2>
+
+      <!-- Icon Divider -->
+      <div class="divider-custom">
+        <div class="divider-custom-line"></div>
+        <div class="divider-custom-icon">
+          <img height=60px src="img/atom.svg">
+        </div>
+        <div class="divider-custom-line"></div>
+      </div>
+
+			<!-- Portfolio Grid Items-->
+      <div class="row justify-content-center">
+          <!-- Portfolio Items-->
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal0">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/cabin.png" alt="Log Cabin"/>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal1">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/cake.png" alt="Tasty Cake"/>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal2">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/circus.png" alt="Circus Tent"/>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal3">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/game.png" alt="Controller"/>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal4">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/safe.png" alt="Locked Safe"/>
+              </div>
+          </div>
+          <div class="col-md-6 col-lg-4 mb-5">
+              <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal5">
+                  <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+                      <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+                  </div><img class="img-fluid" src="assets/img/portfolio/submarine.png" alt="Submarine"/>
+              </div>
+          </div>
+      </div>
+	</div>
+</section>
+
   <!-- Contact Section -->
-  <section class="page-section bg-primary text-white mb-0" id="contact">
+	<section class="page-section portfolio" id="contact">
     <div class="container">
 
       <!-- Contact Section Heading -->
-      <h2 class="page-section-heading text-center text-white mb-0">Contact Me</h2>
+      <h2 class="page-section-heading text-center mb-0">Contact Me</h2>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -178,7 +242,7 @@
 
 
   <!-- Copyright Section -->
-  <section class="copyright py-4 text-white">
+  <section class="copyright py-4">
       <div class="container">
       <div class="row">
       <div class="col-lg-4 ml-auto text-left">
@@ -193,7 +257,7 @@
 
   <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
   <div class="scroll-to-top d-lg-none position-fixed ">
-    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+    <a class="js-scroll-trigger d-block text-center white rounded" href="#page-top">
       <i class="fa fa-chevron-up"></i>
     </a>
   </div>
